--- a/components/Heros/HeroBasic.module.scss
+++ b/components/Heros/HeroBasic.module.scss
@@ -132,4 +132,39 @@
   text-transform: uppercase;
   font-weight: 700;
 }
+.promobgImg {
+  position: absolute;
+  top: 20%;
+  right: 0;
+  z-index: 2;
+  &:hover {
+    cursor: pointer;
+    &:before {
+      content: "Click to participate";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgb(82, 178, 44);
+      color: black;
+      padding: 10px;
+      border-radius: 5px;
+      z-index: 4;
+      opacity: 1;
+      visibility: visible;
+      transition: visibility 0s, opacity 0.3s ease;
+    }
+  }
+  &:before {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s ease;
+  }
+  @media screen and (max-width: 768px) {
+    top: 21%;
+  }
+}
+
+
+
 
